Adjusted webpages, server now able to retrieve webpages.

--- a/MyWebPage/500.html
+++ b/MyWebPage/500.html
@@ -7,20 +7,6 @@
     <title>MyWebPage</title>
   </head>
   <body>
-    <h1>Computer Networks rocks! 🔥</h1>
-    <h2>Some random images :-)</h2>
-    <img src="bombPlanted.jpg" />
-    <img src="cryingJordan.jpg" />
-    <img src="leoMemeFace.jpg" />
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam ex
-      eget pharetra efficitur. Vestibulum vel posuere lectus. Sed leo massa,
-      finibus non odio sit amet, placerat pretium purus. Morbi molestie viverra
-      posuere. Aliquam sed porttitor turpis. Phasellus ultricies vulputate ex
-      vel eleifend. Pellentesque habitant morbi tristique senectus et netus et
-      malesuada fames ac turpis egestas. Nulla eget nunc accumsan, sodales nibh
-      vitae, maximus mauris. Quisque sed augue metus. Cras pretium turpis a
-      accumsan ultrices.
-    </p>
+    <h1>500 Server Error</h1>
   </body>
 </html>
