PUT and POST now fully functional. Added some small changes to Client byte encoding and decoding.

--- a/MyWebPage/index.html
+++ b/MyWebPage/index.html
@@ -7,7 +7,7 @@
     <title>MyWebPage</title>
   </head>
   <body>
-    <h1>Computer Networks rocks! 🔥</h1>
+    <h1>Computer Networks rocks!</h1>
     <h2>Some random images :-)</h2>
     <img src="bombPlanted.jpg" />
     <img src="cryingJordan.jpg" />
